# python-cqrs-demo

./: Dockerfile  README.md  docker-compose-blue.yml  docker-compose-green.yml  docker-compose.yml  pyproject.toml
.github/workflows/: blue-green-deploy.yml  deploy.yml  docker.yml  full.yml  sbom.yml  security.yml
src/: replay.py
src/app_baseline/: db.py  main.py  models.py
src/app_cqrs/: commands.py  consistency.py  main.py  metrics.py  models.py  projector.py  queries.py  worker.py
src/scripts/: rebuild.py
