[project]
name = "cqrs-demo"
version = "0.1.0"
description = "Before/after CQRS demo with FastAPI + MongoDB"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pymongo",
    "pydantic"
]
dev-dependencies = [
    "pytest",
    "ruff",
    "syft"
]

[tool.uvicorn]
factory = true
