[project]
name = "cqrs-demo"
version = "0.1.0"
description = "Before/after CQRS demo with FastAPI + MongoDB"
requires-python = ">=3.11"
dependencies = [
    'ruff","fastapi",
    "uvicorn",
    "pymongo",
    "pydantic"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "syft",
    "hatch"
]

[tool.uvicorn]
factory = true
